istio-getting-started/iac/04-istio-virtual-svc.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greeter
  namespace: istio-example
spec:
  hosts:
    - greeter
  http:
    - route:
        - destination:
            host: greeter
            port:
              number: 30001
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,connect-failure,refused-stream
