istio-getting-started/iac/05-destination-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: greeter
  namespace: istio-example
spec:
  host: greeter
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
        connectTimeout: 1s
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 1
        h2UpgradePolicy: UPGRADE
        idleTimeout: 5s
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE
